Updated Title with small description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wild Rydes</title>
+  <title>The Ryde of future</title>
+  <h2>This is owned by MOHIT BISHESH</h2>
+  <P>A student of UPES ddn pursuing B.Tech with spl. in CCVT.</P>
 
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/main.css">
